<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010101"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/logo_tanuki_ramen"
            android:contentDescription="@string/logo_desc"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:inputType="text"
            android:hint="@string/hint_username"
            android:textColorHint="@color/tanuki_red_muted"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_medium"
            android:autofillHints="username"
            android:background="@drawable/bg_text_field"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:text="@string/login"
            android:fontFamily="@font/japan_ramen"
            android:textColor="@color/black"
            android:background="@drawable/bg_button_ripple"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>